Add Auto Remediation config rules

--- a/CFN/RDS_2.yaml
+++ b/CFN/RDS_2.yaml
@@ -8,6 +8,156 @@ Parameters:
     Description: role Name
 
 Resources:
+  # -------------------------------------------------------------------------------------------------------------------------------------------------------
+  # [EC2.14] Security groups should not allow ingress from 0.0.0.0/0 or ::/0 to port 3389
+  # -------------------------------------------------------------------------------------------------------------------------------------------------------
+  DisablePublicAccessToRDSInstance:
+    Type: AWS::SSM::Document
+    Properties:
+      DocumentType: Automation
+      Name: FTA-DisablePublicAccessToRDSInstance
+      Content:
+        description: >-
+          ### Document name - AWSConfigRemediation-DisablePublicAccessToRDSInstance
+
+          ## What does this document do?
+          The runbook disables public accessibility for the Amazon RDS database instance you specify using 
+          the [ModifyDBInstance](https://docs.aws.amazon.com/AmazonRDS/latest/APIReference/API_ModifyDBInstance.html) API.
+
+          ## Input Parameters
+          * AutomationAssumeRole: (Required) The Amazon Resource Name (ARN) of the AWS Identity and Access Management (IAM) role that allows Systems Manager Automation to perform the actions on your behalf.
+          * DbiResourceId: (Required) The resource identifier for the DB instance you want to disable public accessibility.
+
+          ## Output Parameters
+          * DisablePubliclyAccessibleOnRDS.Response: The standard HTTP response from the ModifyDBInstance API.
+        schemaVersion: '0.3'
+        assumeRole: !Sub 'arn:aws:iam::${AWS::AccountId}:role/${AutomationRoleName}'
+        parameters:
+          AutomationAssumeRole:
+            type: String
+            description: (Required) The Amazon Resource Name (ARN) of the AWS Identity and Access Management (IAM) role that allows Systems Manager Automation to perform the actions on your behalf.
+            allowedPattern: ^arn:aws[a-z0-9-]*:iam::\d{12}:role\/[\w-\/.@+=,]{1,1017}$
+          DbiResourceId:
+            type: String
+            description: (Required) The resource identifier for the DB instance you want to disable public accessibility.
+            allowedPattern: "db-[A-Z0-9]{26}"
+          TopicArn:
+            type: String
+            description: (Required) The ARN of the SNS topic to publish the notification to.
+          Message:
+            type: String
+            description: (Required) The message to include in the SNS notification.
+        outputs:
+          - DisablePubliclyAccessibleOnRDS.Response
+        mainSteps:
+          -
+            name: GetRDSInstanceIdentifier
+            action: "aws:executeAwsApi"
+            description: |
+              ## GetRDSInstanceIdentifier
+              Gathers the DB instance identifier from the DB instance resource identifier.
+              ## Outputs
+              * DbInstanceIdentifier: The Amazon RDS DB instance identifier.
+            timeoutSeconds: 600
+            isEnd: false
+            inputs:
+              Service: rds
+              Api: DescribeDBInstances
+              Filters:
+                - Name: "dbi-resource-id"
+                  Values:
+                    - "{{ DbiResourceId }}"
+            outputs:
+              - Name: DbInstanceIdentifier
+                Selector: $.DBInstances[0].DBInstanceIdentifier
+                Type: String
+          -
+            name: VerifyDBInstanceStatus
+            action: "aws:waitForAwsResourceProperty"
+            timeoutSeconds: 900
+            isEnd: false
+            description: |
+              ## VerifyDBInstanceStatus
+              Waits for and verifies the DB instances is in an AVAILABLE state. 
+            inputs:
+              Service: rds
+              Api: DescribeDBInstances
+              DBInstanceIdentifier: "{{ GetRDSInstanceIdentifier.DbInstanceIdentifier }}"
+              PropertySelector: "$.DBInstances[0].DBInstanceStatus"
+              DesiredValues:
+                - "available"
+          -
+            name: DisablePubliclyAccessibleOnRDS
+            action: "aws:executeAwsApi"
+            description: |
+              ## DisablePubliclyAccessibleOnRDS
+              Disables public accessibility on your DB instance.
+              ## Outputs
+              * Response: The standard HTTP response from the ModifyDBInstance API.
+            timeoutSeconds: 600
+            isEnd: false
+            inputs:
+              Service: rds
+              Api: ModifyDBInstance
+              DBInstanceIdentifier: "{{ GetRDSInstanceIdentifier.DbInstanceIdentifier }}"
+              PubliclyAccessible: false
+            outputs:
+              - Name: Response
+                Selector: $
+                Type: StringMap
+          -
+            name: WaitForDBInstanceStatusToModify
+            action: "aws:waitForAwsResourceProperty"
+            timeoutSeconds: 600
+            isEnd: false
+            description: |
+              ## WaitForDBInstanceStatusToModify
+              Waits for the DB instance to change to a MODIFYING state.
+            inputs:
+              Service: rds
+              Api: DescribeDBInstances
+              DBInstanceIdentifier: "{{ GetRDSInstanceIdentifier.DbInstanceIdentifier }}"
+              PropertySelector: "$.DBInstances[0].DBInstanceStatus"
+              DesiredValues:
+                - "modifying"
+          -
+            name: WaitForDBInstanceStatusToAvailableAfterModify
+            action: "aws:waitForAwsResourceProperty"
+            timeoutSeconds: 600
+            isEnd: false
+            description: |
+              ## WaitForDBInstanceStatusToAvailableAfterModify
+              Waits for the DB instance to change to an AVAILABLE state
+            inputs:
+              Service: rds
+              Api: DescribeDBInstances
+              DBInstanceIdentifier: "{{ GetRDSInstanceIdentifier.DbInstanceIdentifier }}"
+              PropertySelector: "$.DBInstances[0].DBInstanceStatus"
+              DesiredValues:
+                - "available"
+          -
+            name: VerifyDBInstancePubliclyAccess
+            action: "aws:assertAwsResourceProperty"
+            timeoutSeconds: 600
+            isEnd: true
+            description: |
+              ## VerifyDBInstancePubliclyAccess
+              Confirms public accessibility is disabled on the DB instance.
+            inputs:
+              Service: rds
+              Api: DescribeDBInstances
+              DBInstanceIdentifier: "{{ GetRDSInstanceIdentifier.DbInstanceIdentifier }}"
+              PropertySelector: "$.DBInstances[0].PubliclyAccessible"
+              DesiredValues:
+                - "False"
+          - name: PublishSNSNotification
+            action: aws:executeAwsApi
+            inputs:
+              Service: sns
+              Api: Publish
+              TopicArn: "{{TopicArn}}"
+              Message: "{{Message}}, {{ GetRDSInstanceIdentifier.DbInstanceIdentifier }}"
+            isEnd: true
   AWSConfigRule:
     Type: AWS::Config::ConfigRule
     Properties:
@@ -30,11 +180,19 @@ Resources:
           StaticValue:
             Values: 
               - !Sub 'arn:aws:iam::${AWS::AccountId}:role/${AutomationRoleName}'
+        TopicArn:
+          StaticValue:
+            Values: 
+              - !Ref TopicArn
+        Message:
+          StaticValue:
+            Values: 
+              - !Sub 'Notification from FTA-DisablePublicAccessToRDSInstance trigger in AccountID: ${AWS::AccountId} and Region: ${AWS::Region} by RDS: '
         DbiResourceId:
           ResourceValue:
             Value: RESOURCE_ID
       RetryAttemptSeconds: 30
-      TargetId: AWSConfigRemediation-DisablePublicAccessToRDSInstance
+      TargetId: !Ref DisablePublicAccessToRDSInstance
       TargetType: "SSM_DOCUMENT"
 
 
