--- a/CFN/base.yaml
+++ b/CFN/base.yaml
@@ -4,18 +4,23 @@ Description: AWS Config rules
 Parameters:
   cfnTemplatesBucketURL:
     Type: String
-    Default: "https://s3.amazonaws.com/fta-cloudformation-templates-us-east-1"
+    Default: "https://s3.amazonaws.com/securitytooling-terraform-state"
     Description: S3 Bucket URL containing CFN templates e.g. https://<name>.s3.amazonaws.com/<AWS_REGION>/<VERSION>
 
 Resources:
 
-  cfnStackRDSTwo:
-    Type: AWS::CloudFormation::Stack
-    Properties:
-      TemplateURL: !Join [ "/", [ !Ref cfnTemplatesBucketURL, "aws-org-config-rules",  "RDS_2.yaml"] ]
-      TimeoutInMinutes: 10
-  cfnStacklambdaOne:
-    Type: AWS::CloudFormation::Stack
-    Properties:
-      TemplateURL: !Join [ "/", [ !Ref cfnTemplatesBucketURL, "aws-org-config-rules",  "Lambda_1.yaml"] ]
-      TimeoutInMinutes: 10
+   cfnStackRDSTwo:
+     Type: AWS::CloudFormation::Stack
+     Properties:
+       TemplateURL: !Join [ "/", [ !Ref cfnTemplatesBucketURL, "aws-org-config-rules",  "RDS_2.yaml"] ]
+       TimeoutInMinutes: 10
+   cfnStacklambdaOne:
+     Type: AWS::CloudFormation::Stack
+     Properties:
+       TemplateURL: !Join [ "/", [ !Ref cfnTemplatesBucketURL, "aws-org-config-rules",  "Lambda_1.yaml"] ]
+       TimeoutInMinutes: 10
+   cfnStackEC2Fourteen:
+     Type: AWS::CloudFormation::Stack
+     Properties:
+       TemplateURL: !Join [ "/", [ !Ref cfnTemplatesBucketURL, "aws-org-config-rules",  "EC2_14.yaml"] ]
+       TimeoutInMinutes: 10
