--- a/CFN/RDS_2.yaml
+++ b/CFN/RDS_2.yaml
@@ -143,7 +143,7 @@ Resources:
             name: VerifyDBInstancePubliclyAccess
             action: "aws:assertAwsResourceProperty"
             timeoutSeconds: 600
-            isEnd: true
+            isEnd: false
             description: |
               ## VerifyDBInstancePubliclyAccess
               Confirms public accessibility is disabled on the DB instance.
