adding update method to force new document version

--- a/CFN/RDS_2.yaml
+++ b/CFN/RDS_2.yaml
@@ -18,6 +18,7 @@ Resources:
   DisablePublicAccessToRDSInstance:
     Type: AWS::SSM::Document
     Properties:
+      UpdateMethod: NewVersion
       DocumentType: Automation
       Name: FTA-DisablePublicAccessToRDSInstance
       Content:
