--- a/CFN/base.yaml
+++ b/CFN/base.yaml
@@ -9,18 +9,23 @@ Parameters:
 
 Resources:
 
-   cfnStackRDSTwo:
-     Type: AWS::CloudFormation::Stack
-     Properties:
-       TemplateURL: !Join [ "/", [ !Ref cfnTemplatesBucketURL, "aws-org-config-rules",  "RDS_2.yaml"] ]
-       TimeoutInMinutes: 10
-   cfnStacklambdaOne:
-     Type: AWS::CloudFormation::Stack
-     Properties:
-       TemplateURL: !Join [ "/", [ !Ref cfnTemplatesBucketURL, "aws-org-config-rules",  "Lambda_1.yaml"] ]
-       TimeoutInMinutes: 10
-   cfnStackEC2Fourteen:
-     Type: AWS::CloudFormation::Stack
-     Properties:
-       TemplateURL: !Join [ "/", [ !Ref cfnTemplatesBucketURL, "aws-org-config-rules",  "EC2_14.yaml"] ]
-       TimeoutInMinutes: 10
+  cfnStackLambdaGetTags:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      TemplateURL: !Join [ "/", [ !Ref cfnTemplatesBucketURL, "aws-org-config-rules",  "GetTagsLambda.yaml"] ]
+      TimeoutInMinutes: 10
+  cfnStackRDSTwo:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      TemplateURL: !Join [ "/", [ !Ref cfnTemplatesBucketURL, "aws-org-config-rules",  "RDS_2.yaml"] ]
+      TimeoutInMinutes: 10
+  cfnStacklambdaOne:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      TemplateURL: !Join [ "/", [ !Ref cfnTemplatesBucketURL, "aws-org-config-rules",  "Lambda_1.yaml"] ]
+      TimeoutInMinutes: 10
+  cfnStackEC2Fourteen:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      TemplateURL: !Join [ "/", [ !Ref cfnTemplatesBucketURL, "aws-org-config-rules",  "EC2_14.yaml"] ]
+      TimeoutInMinutes: 10
