adding publish lambda

--- a/CFN/base.yaml
+++ b/CFN/base.yaml
@@ -14,6 +14,11 @@ Resources:
     Properties:
       TemplateURL: !Join [ "/", [ !Ref cfnTemplatesBucketURL, "aws-org-config-rules",  "GetTagsLambda.yaml"] ]
       TimeoutInMinutes: 10
+  cfnStackLambdaGetInventory:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      TemplateURL: !Join [ "/", [ !Ref cfnTemplatesBucketURL, "aws-org-config-rules",  "GetAccountInventoryLambda.yaml"] ]
+      TimeoutInMinutes: 10
   cfnStackRDSTwo:
     Type: AWS::CloudFormation::Stack
     Properties:
